feat: use of the new static type mfserv plugin
close #1

--- a/config.ini
+++ b/config.ini
@@ -43,15 +43,8 @@ extra_nginx_conf_filename=null
 
 [app_main]
 
-# valid values: gunicorn3_sync, gunicorn2_sync, gunicorn3_asyncio
-type=gunicorn3_sync
-
-# number of workers
-workers=2
-
-# wsgi function entry point (main arg for gunicorn)
-
-gunicorn_arg=main.wsgi:application
+# valid values: static
+type=static
 
 
 # Use prefix based routing:
@@ -67,10 +60,6 @@ prefix_based_routing=true
 # NOTE: you need a DNS "catch all" to do that (like a DNS CNAME *.{host} => {ip_of_the_host}
 virtualdomain_based_routing=false
 
-# Route directly at the webserver part /static/ url path to static directory
-# inside the application directory
-static_routing=true
-
 # !!! ADVANCED SETTING !!!
 # use this only if you are sure about what you are doing
 # extra nginx configuration filename inside your plugin directory
@@ -81,20 +70,3 @@ static_routing=true
 # Note: if you use virtualdomain_based_routing, the content will be included
 # in the custom "server" section (specific to your app and not in "location")
 extra_nginx_conf_filename=null
-
-# !!! ADVANCED SETTING !!!
-# use this only if you are sure about what you are doing
-# extra nginx configuration filename inside your plugin directory
-# null => no extra configuration
-# the content will be included directly in your app "location" section for
-# the "static" routing part (see also extra_nginx_conf_filename key for
-# the "dynamic" part)
-# if you want to include some configuration fragments at a more general level
-# don't use this key but the one in [general] section)
-extra_nginx_conf_static_filename=null
-
-# If true, add plugin directory to python path
-add_plugin_dir_to_python_path=true
-
-# If true, add app directory to python path
-add_app_dir_to_python_path=false
