--- a/config.ini
+++ b/config.ini
@@ -14,22 +14,22 @@
 # Version of the plugin (X.Y.Z)
 # If the value is {{MFMODULE_VERSION}},
 # the current module version is used
-version=0.0.1
+_version=0.0.1
 
 # Summary (one line) of the goal of the plugin
-summary=one line summary
+_summary=one line summary
 
 # License of the plugin
-license=BSD
+_license=BSD
 
 # URL of the plugin homepage
-url=https://github.com/metwork-framework
+_url=https://github.com/metwork-framework
 
 # Name of the maintainer of the plugin on the form "Firstname FAMILYNAME <email>"
-maintainer=Fabien MARTY <fabien.marty@meteo.fr>
+_maintainer=Fabien MARTY <fabien.marty@meteo.fr>
 
 # Vendor of the plugin
-vendor=MetWork
+_vendor=MetWork
 
 # !!! ADVANCED SETTING !!!
 # Use this only if you are sure about what you are doing
@@ -44,7 +44,7 @@ vendor=MetWork
 # Note: the different between this key and the one just bellow is that
 #       the configuration fragment will be inserted in "http" section
 #       (for this one) and in "server" section (for the one above)
-extra_nginx_http_conf_filename=null
+_extra_nginx_http_conf_filename=null
 
 # !!! ADVANCED SETTING !!!
 # Use this only if you are sure about what you are doing
@@ -60,7 +60,7 @@ extra_nginx_http_conf_filename=null
 # Note: the different between this key and the one just above is that
 #       the configuration fragment will be inserted in "server" section
 #       (for this one) and in "http" section (for the one above)
-extra_nginx_server_conf_filename=null
+_extra_nginx_server_conf_filename=null
 
 # !!! ADVANCED SETTING !!!
 # Use this only if you are sure about what you are doing
@@ -70,12 +70,7 @@ extra_nginx_server_conf_filename=null
 # and must be valid LUA code!
 # Note: if you use this key, you can break the whole mfserv module
 #       => so there will be a warning at plugin installation about that
-extra_nginx_init_worker_by_lua_block_filename=null
-
-# Private key to store the file format version
-# => THERE IS NO GOOD REASON TO CHANGE THIS VALUE
-# So, if you are about to change this value, DON'T DO THIS
-__version=1
+_extra_nginx_init_worker_by_lua_block_filename=null
 
 ###############################
 #####                     #####
@@ -89,18 +84,18 @@ __version=1
 # http://{host}:{port}/{plugin_name}/{app_name}/...
 # (and/or)
 # http://{host}:{port}/{plugin_name}/... if app_name == main or only one app in the plugin
-prefix_based_routing=true
+_prefix_based_routing=true
 
 # Use virtualdomain based routing
 # http://{app_name}.{plugin_name}.{host}:{port}/...
 # (and/or)
 # http://{plugin_name}.{host}:{port}/... if app_name == main or only one app in the plugin
 # NOTE: you need a DNS "catch all" to do that (like a DNS CNAME *.{host} => {ip_of_the_host}
-virtualdomain_based_routing=false
+_virtualdomain_based_routing=false
 
-static_routing=true
-static_url_prefix=
-static_directory=
+_static_routing=true
+_static_url_prefix=
+_static_directory=
 
 # !!! ADVANCED SETTING !!!
 # Add extra routes to your plugin (starting by /, not ending by /, separated by ;)
@@ -121,7 +116,23 @@ prefix_based_routing_extra_routes=null
 # the "dynamic" part)
 # if you want to include some configuration fragments at a more general level
 # don't use this key but the one in [general] section)
-extra_nginx_conf_static_filename=nginx_extra.conf
+_extra_nginx_conf_static_filename=nginx_extra.conf
+
+# Optional http point to diagnose plugin health during mfserv.status
+# null => this feature is not activated
+# else a GET request will be done on http://127.0.0.1:{MFSERV_NGINX_PORT}{YOUR_ENDPOINT}
+# (so http_test_endpoint must start with a slash)
+# If the result status code is {http_test_expected_status_code} and if the
+# {http_test_expected_body} is found in the result body, then the test is ok
+# If not, we will retry until {http_test_timeout} timeout (in seconds)
+# After this timeout, the test will fail
+# Note: if you want something more specific that this basic test, you can implement
+#       a plugin.status executable in your plugin bin/ subdirectory
+#       it will be called (with a 30s timeout) and it will pass if the return code is 0
+_http_test_endpoint=null
+_http_test_expected_status_code=200
+_http_test_expected_body=OK
+_http_test_timeout=10
 
 # !!! ADVANCED SETTINGS !!!
 # You can add extra daemons which will be launched within your plugin
@@ -129,14 +140,23 @@ extra_nginx_conf_static_filename=nginx_extra.conf
 # You have to provide a command to daemonize (the command must run in
 # foreground and not daemonize by itself)
 # [extra_daemon_foo]
-# cmd_and_args = /your/foreground/command command_arg1 command_arg2
+# _cmd_and_args = /your/foreground/command command_arg1 command_arg2
 # numprocesses=1
 # graceful_timeout = 30
 # rlimit_as = 1000000000
 # rlimit_nofile = 1000
 # rlimit_stack = 10000000
-# rlimit_core = 100000
 # rlimit_fsize = 100000000
 # log_split_stdout_stderr=AUTO
 # log_split_multiple_workers=AUTO
+# max_age=0
 
+[custom]
+# here is a space for your public configuration keys
+# (ie. overridable by administrator after deployment)
+# your keys shouldn't start with an underscore (as they are public)
+# and you have to read their value through the corresponding env variable
+# and NOT by parsing this file
+# a key named "foo_bar" here will generate (in plugin_env) an env var called
+# MFSERV_PLUGIN_{YOU PLUGIN NAME IN UPPER CASE}_CUSTOM_{YOUR KEY IN UPPERCASE}
+# with the corresponding value inside
